🍉 Add: store
